Stop using deprecated Thread.getId
Use Thread.threadId instead.